# Myprojects

./: .breakpoints  .replit  Hotel Management.py  Login System.py  Otp Verification System.py  Phone Number Identifier.py  Qr code Generator.py  README.md  pyproject.toml
