[tool.poetry]
name = "repl_python3_beta_Myprojects"
version = "0.1.0"
description = ""
authors = ["SUBHASHJHA20302 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
phonenumbers = "^8.12.45"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
